--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body {
   margin: 0;
   text-align: center;
 }
+nav a{
+  background-color: darkgray;
+}
 #featured-property p{
   margin-left: auto;
   margin-right: auto;
